Fix alignment of menu

--- a/_sass/ddc-day.scss
+++ b/_sass/ddc-day.scss
@@ -817,8 +817,7 @@ div.wrapper {
     div.page-navigator {
 
       height: 100%;
-      width: 820px;
-      max-width: 100%;
+      width: 100%;
       margin: 0;
       top: 0;
       left: 0;
